--- a/src/main/resources/static/style/job-company-style.css
+++ b/src/main/resources/static/style/job-company-style.css
@@ -3,6 +3,15 @@
     src: url('../fonts/Trispace.ttf');
 }
 
+.error {
+    color: #d71313;
+}
+
+.mymodal {
+    margin-left: 3%;
+    margin-right: 3%;
+}
+
 #myContainer {
     margin-left: 3%;
     margin-bottom: 5%;
@@ -35,7 +44,7 @@ body {
 
 .tableFixHead {
     overflow-y: scroll;
-    width: 68%;
+    width: 75%;
     height: 480px;
 }
 
@@ -60,4 +69,31 @@ tbody tr {
 
 .col1 {
     width: 5%;
+}
+
+.col1 {
+    padding-left: 25px;
+    width: 5%;
+}
+
+.col2 {
+    min-width: 120px;
+}
+
+.col3 {
+    min-width: 250px;
+}
+
+.col4 {
+    min-width: 200px;
+}
+
+.deleteButton, .editButton {
+    padding-right: 10px;
+}
+
+@media (max-width: 700px) {
+    .remove-description {
+        display: none;
+    }
 }
