--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,7 +24,8 @@
                     <div class="row">
                         <div class="mb-3">
                             <div class="form-outline">
-                                <input type="email" id="email" name="email" class="form-control form-control-lg" required />
+                                <input type="email" id="email" name="email" class="form-control form-control-lg"
+                                       required/>
                                 <label class="form-label" for="email">Email address<span class="error">*</span></label>
                             </div>
                         </div>
@@ -35,7 +36,8 @@
                     <div class="row">
                         <div class="mb-3">
                             <div class="form-outline">
-                                <input type="password" id="passwd" name="password" class="form-control form-control-lg" required />
+                                <input type="password" id="passwd" name="password" class="form-control form-control-lg"
+                                       required/>
                                 <label class="form-label" for="passwd">Password<span class="error">*</span></label>
                             </div>
                         </div>
@@ -51,7 +53,8 @@
 
                     <div class="text-center text-lg-start mt-4 pt-2">
                         <button type="submit" class="btn btn-primary btn-lg"
-                                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
+                                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login
+                        </button>
                     </div>
 
                 </form>
