--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -12,84 +12,92 @@
 <body>
 
 <section class="vh-100 gradient-custom">
-  <div class="container py-5 h-100">
-    <div class="row justify-content-center align-items-center h-100">
-      <div class="col-12 col-lg-9 col-xl-7">
-        <div class="card shadow-2-strong card-registration" style="border-radius: 15px;">
-          <div class="card-body p-4 p-md-5">
-            <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Register</h3>
+    <div class="container py-5 h-100">
+        <div class="row justify-content-center align-items-center h-100">
+            <div class="col-12 col-lg-9 col-xl-7">
+                <div class="card shadow-2-strong card-registration" style="border-radius: 15px;">
+                    <div class="card-body p-4 p-md-5">
+                        <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Register</h3>
 
-            <form action="/register/{{id}}/submit" method="post" name="userCompany">
+                        <form action="/register/{{id}}/submit" method="post" name="userCompany">
 
-              <div class="row">
-                <div class="col-md-6 mb-4">
-                  <div class="form-outline">
-                    <input type="text" id="firstName" name="firstName" class="form-control form-control-lg" required />
-                    <label class="form-label" for="firstName">First Name<span class="error">*</span></label>
-                  </div>
+                            <div class="row">
+                                <div class="col-md-6 mb-4">
+                                    <div class="form-outline">
+                                        <input type="text" id="firstName" name="firstName"
+                                               class="form-control form-control-lg" required/>
+                                        <label class="form-label" for="firstName">First Name<span class="error">*</span></label>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 mb-4">
+                                    <div class="form-outline">
+                                        <input type="text" id="lastName" name="lastName"
+                                               class="form-control form-control-lg" required/>
+                                        <label class="form-label" for="lastName">Last Name<span
+                                                class="error">*</span></label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-6 mb-4 pb-2">
+                                    <div class="form-outline">
+                                        <input type="email" id="email" name="email" class="form-control form-control-lg"
+                                               required/>
+                                        <label class="form-label" for="email">Email<span class="error">*</span></label>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 mb-4 pb-2">
+                                    <div class="form-outline">
+                                        <input type="tel" id="phone" name="phone" pattern="[0-9]{10}"
+                                               class="form-control form-control-lg"/>
+                                        <label class="form-label" for="phone">Phone Number</label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-6 mb-4 pb-2">
+                                    <div class="form-outline">
+                                        <input type="password" id="password" name="password"
+                                               class="form-control form-control-lg" required/>
+                                        <label class="form-label" for="password">Password<span
+                                                class="error">*</span></label>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-6 mb-4 pb-2">
+                                    <div class="form-outline">
+                                        <input type="password" id="confirmPassword" name="confirmPassword"
+                                               class="form-control form-control-lg" required/>
+                                        <label class="form-label" for="confirmPassword">Confirm Password<span
+                                                class="error">*</span></label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="errorPassword">
+                                {{#errorPassword}}Passwords do not match!{{/errorPassword}}
+                            </div>
+                            <div class="errorEmail">
+                                {{#errorEmail}}Email already exists!{{/errorEmail}}
+                            </div>
+
+                            <div class="mt-4 pt-2">
+                                <input class="btn btn-primary btn-lg" type="submit" value="Submit"/>
+                            </div>
+
+                        </form>
+                    </div>
                 </div>
-                <div class="col-md-6 mb-4">
-                  <div class="form-outline">
-                    <input type="text" id="lastName" name="lastName" class="form-control form-control-lg" required />
-                    <label class="form-label" for="lastName">Last Name<span class="error">*</span></label>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-md-6 mb-4 pb-2">
-                  <div class="form-outline">
-                    <input type="email" id="email" name="email" class="form-control form-control-lg" required />
-                    <label class="form-label" for="email">Email<span class="error">*</span></label>
-                  </div>
-                </div>
-                <div class="col-md-6 mb-4 pb-2">
-                  <div class="form-outline">
-                    <input type="tel" id="phone" name="phone" pattern="[0-9]{10}"
-                           class="form-control form-control-lg" />
-                    <label class="form-label" for="phone">Phone Number</label>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-md-6 mb-4 pb-2">
-                  <div class="form-outline">
-                    <input type="password" id="password" name="password" class="form-control form-control-lg" required />
-                    <label class="form-label" for="password">Password<span class="error">*</span></label>
-                  </div>
-                </div>
-
-                <div class="col-md-6 mb-4 pb-2">
-                  <div class="form-outline">
-                    <input type="password" id="confirmPassword" name="confirmPassword" class="form-control form-control-lg" required />
-                    <label class="form-label" for="confirmPassword">Confirm Password<span class="error">*</span></label>
-                  </div>
-                </div>
-              </div>
-              <div class="errorPassword">
-                {{#errorPassword}}Passwords do not match!{{/errorPassword}}
-              </div>
-              <div class="errorEmail">
-                {{#errorEmail}}Email already exists!{{/errorEmail}}
-              </div>
-
-              <div class="mt-4 pt-2">
-                <input class="btn btn-primary btn-lg" type="submit" value="Submit" />
-              </div>
-
-            </form>
-          </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </section>
 
 <script>
-  document.querySelectorAll('.form-outline').forEach((formOutline) => {
-    new mdb.Input(formOutline).init();
-  });
+    document.querySelectorAll('.form-outline').forEach((formOutline) => {
+        new mdb.Input(formOutline).init();
+    });
 </script>
 
 </body>
