--- a/src/main/resources/static/style/job-company-style.css
+++ b/src/main/resources/static/style/job-company-style.css
@@ -19,11 +19,11 @@
 }
 
 #page-title {
-    font-size: 1.5rem;
+    font-size: 2rem;
 }
 
 body {
-    background: #F5F5F5;
+    background: #e7e7e7;
 }
 
 .dashboard-table {
@@ -33,9 +33,9 @@ body {
     position: static;
     left: 22%;
     top: 25%;
-    background: #EFF2F7;
+    background: #ffffff;
     margin: auto;
-    color: #3183B1;
+    color: #2a47bd;
 }
 
 #table-body {
@@ -44,8 +44,8 @@ body {
 
 .tableFixHead {
     overflow-y: scroll;
-    width: 75%;
-    height: 480px;
+    width: 69%;
+    height: 450px;
 }
 
 .tableFixHead thead th {
@@ -57,18 +57,15 @@ body {
 
 thead {
     border-radius: 8px 8px 0 0;
+    border: 0.2px #948787;
     height: 50px;
 }
 
 tbody tr {
-    height: 55px;
+    height: 60px;
     background: #FFFFFF;
-    border: 0.5px solid #C5D0DE;
+    border: 1px solid #948787;
     color: #000000;
-}
-
-.col1 {
-    width: 5%;
 }
 
 .col1 {
