added candidates page

--- a/src/main/resources/templates/dashboard-company.html
+++ b/src/main/resources/templates/dashboard-company.html
@@ -47,8 +47,8 @@
 
                         <div class="row">
                             <div class="d-flex justify-content-end col-11">
-                                <button type="button" class="btn btn-primary btn-sm">Show details
-                                </button>
+                                <a type="button" href="/candidate-announcement/{{id}}" class="btn btn-primary btn-sm">Show details
+                                </a>
                             </div>
                         </div>
                     </td>
