--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Jobs - My Profile</title>
+    <title>Jobs - Company profile</title>
 
     {{>fragments/links}}
     <link rel="stylesheet" href="../static/style/navigation-style.css">
@@ -30,7 +30,7 @@
                 <div id="myForm">
                     <div class="row">
                         <div class="col-6">
-                            <p id="page-title"><b>My Profile</b></p>
+                            <p id="page-title"><b>Company profile</b></p>
                         </div>
                         <div class="col-6">
                             <div id="editButton">
