added my profile page + added more validation for password and email

--- a/src/main/resources/static/style/profile-style.css
+++ b/src/main/resources/static/style/profile-style.css
@@ -35,7 +35,7 @@
     flex-direction: column;
 }
 
-.fields, #companyName, #email, #city, #country, #phone {
+.fields, #companyName, #email, #city, #country, #phone, #firstName, #lastName {
     box-sizing: border-box;
 
     width: 90%;
