--- a/src/main/resources/templates/candidate-announcement.html
+++ b/src/main/resources/templates/candidate-announcement.html
@@ -5,8 +5,8 @@
     <title>Jobs - Candidates</title>
 
     {{>fragments/links}}
-    <link rel="stylesheet" href="../static/style/navigation-style.css">
-    <link rel="stylesheet" href="../static/style/dashboard-company-style.css">
+    <link rel="stylesheet" href="../../static/style/navigation-style.css">
+    <link rel="stylesheet" href="../../static/style/dashboard-company-style.css">
     <!-- Page style -->
 
 </head>
