--- a/src/main/resources/templates/dashboard-company.html
+++ b/src/main/resources/templates/dashboard-company.html
@@ -47,7 +47,7 @@
 
                         <div class="row">
                             <div class="d-flex justify-content-end col-11">
-                                <a type="button" href="/candidate-announcement/{{id}}" class="btn btn-primary btn-sm">Show details
+                                <a type="button" href="/candidate-announcement/{{userCompany.id}}/{{id}}" class="btn btn-primary btn-sm">Show details
                                 </a>
                             </div>
                         </div>
