--- a/src/main/resources/templates/fragments/main-navbar.html
+++ b/src/main/resources/templates/fragments/main-navbar.html
@@ -1,10 +1,10 @@
-<link rel="stylesheet" href="../static/style/main-navbar-style.css">
+<link rel="stylesheet" href="../../../static/style/main-navbar-style.css">
 
 <!-- Navbar -->
 <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
     <!-- Container wrapper -->
     <div class="container-fluid">
-        <img src="../static/images/logo.jpeg"
+        <img src="../../../static/images/logo.jpeg"
              class="image">
 
         <ul class="navbar-nav ms-auto d-flex flex-row">
