--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,5 +1,5 @@
 <!-- Sidebar -->
-{{#company}}
+{{#userCompany}}
 <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
     <div class="position-sticky">
         <div class="list-group list-group-flush mx-3 mt-4">
@@ -22,5 +22,5 @@
         </div>
     </div>
 </nav>
-{{/company}}
+{{/userCompany}}
 <!-- Sidebar -->
